[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/textures/button pressed.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Minigames/Red Button.gd" type="Script" id=2]
[ext_resource path="res://Assets/textures/button.png" type="Texture" id=3]
[ext_resource path="res://Assets/audio/nukeexplosion.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/audio/alarm.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/textures/explosion-4.png" type="Texture" id=6]
[ext_resource path="res://Assets/audio/button press/buttonpress5.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/audio/button press/buttonpress4.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/audio/button press/buttonpress3.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/audio/button press/buttonpress2.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/audio/button press/buttonpress1.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/audio/button press/buttonpress10.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/audio/button press/buttonpress20.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/audio/button press/buttonpress17.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/audio/button press/buttonpress11.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/audio/button press/buttonpress14.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/audio/button press/buttonpress16.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/audio/button press/buttonpress9.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/audio/button press/buttonpress8.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/audio/button press/buttonpress12.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/audio/button press/buttonpress15.wav" type="AudioStream" id=21]
[ext_resource path="res://Assets/audio/button press/buttonpress6.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/audio/button press/buttonpress13.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/audio/button press/buttonpress18.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/audio/button press/buttonpress7.wav" type="AudioStream" id=25]
[ext_resource path="res://Assets/audio/button press/buttonpress19.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/audio/button press/end_click_sound.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/textures/explosion_overlay.png" type="Texture" id=28]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 12 ), SubResource( 12 ), null ],
"loop": false,
"name": "explosion",
"speed": 7.0
} ]

[node name="Tap20" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.952941, 0.952941, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red Button" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="Red Button"]
visible = false
margin_left = 238.75
margin_top = 865.695
margin_right = 269.75
margin_bottom = 895.695
rect_scale = Vector2( 3.61466, -3.86999 )
max_value = 20.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Red Button"]
margin_left = -16.9707
margin_top = 479.282
margin_right = 1903.03
margin_bottom = 2003.28
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Red Button"]
one_shot = true

[node name="nuke audio" type="AudioStreamPlayer" parent="Red Button"]
stream = ExtResource( 4 )
volume_db = -19.184

[node name="alarm audio" type="AudioStreamPlayer" parent="Red Button"]
stream = ExtResource( 5 )

[node name="Explosion" type="AnimatedSprite" parent="Red Button"]
position = Vector2( 284.678, 287.675 )
scale = Vector2( 3.20064, 3.20064 )
frames = SubResource( 13 )

[node name="PressSounds" type="Node" parent="Red Button"]

[node name="press1" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 11 )

[node name="press2" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 10 )

[node name="press3" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 9 )

[node name="press4" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 8 )

[node name="press5" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 7 )

[node name="press6" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 22 )

[node name="press7" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 25 )

[node name="press8" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 19 )

[node name="press9" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 18 )

[node name="press10" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 12 )

[node name="press11" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 15 )

[node name="press12" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 20 )

[node name="press13" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 23 )

[node name="press14" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 16 )

[node name="press15" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 21 )

[node name="press16" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 17 )

[node name="press17" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 14 )

[node name="press18" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 24 )

[node name="press19" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 26 )

[node name="press20" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 13 )

[node name="end_press" type="AudioStreamPlayer" parent="Red Button/PressSounds"]
stream = ExtResource( 27 )

[node name="Explosion Overlay" type="Sprite" parent="Red Button"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 28 )
offset = Vector2( 288, 512 )

[node name="Opacity_Animation" type="Tween" parent="Red Button/Explosion Overlay"]
[connection signal="pressed" from="Red Button/TextureButton" to="Red Button" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Red Button/Timer" to="Red Button" method="_on_Timer_timeout"]
